force-app/main/default/objects/Assessment_Answer_Key__mdt/Assessment_Answer_Key__mdt.object-meta.xml
<CustomObject>
    <description>Stores LMS assessment MCQ answer keys.</description>
    <label>Assessment Answer Key</label>
    <pluralLabel>Assessment Answer Keys</pluralLabel>
</CustomObject>