force-app/main/default/objects/Assessment_Answer_Key__mdt/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <label>Correct Answer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>